--- a/invoice.html
+++ b/invoice.html
@@ -117,10 +117,10 @@
                 <div class="col-sm-4">
                   <div class="btn-group btn-group-justified">
                     <div class="btn-group">
-                      <a href="" type="submit" class="btn btn-opcion-active">Facturas</a>
+                      <a href="/invoice.html" type="submit" class="btn btn-opcion-active">Facturas</a>
                     </div>
                     <div class="btn-group">
-                      <a href="" type="submit" class="btn btn-default">Presupuestos</a>
+                      <a href="/budget.html" type="submit" class="btn btn-default">Presupuestos</a>
                     </div>
                   </div>
                 </div>
